fix the text align of commons components

--- a/src/css/commons_view_all_locations.module.scss
+++ b/src/css/commons_view_all_locations.module.scss
@@ -24,6 +24,7 @@ $view-all-locations-static-height: 24rem;
   .text_prop {
     z-index: 12;
     color: $color-black;
+    text-align: left;
   }
 
   .btn {
