--- a/src/css/top_about_us.module.scss
+++ b/src/css/top_about_us.module.scss
@@ -28,6 +28,7 @@ $top-get-in-touch-text-color: #383C47;
     color: $top-get-in-touch-text-color;
     padding: 0 3rem;
     pointer-events: none;
+    text-align: left;
   }
   .btn{
     color:#262626;
