--- a/src/css/top_get_in_touch.module.scss
+++ b/src/css/top_get_in_touch.module.scss
@@ -26,6 +26,7 @@ $top-get-in-touch-text-color: #383C47;
   .text_prop{
     z-index: 12;
     color: $top-get-in-touch-text-color;
+    text-align: left;
   }
 
   .btn{
